# BulkFileReader

./: .clang-format  .gitignore  BulkFileReader.autopkg  CMakeLists.txt  README.md
Tester/: Tester.sln
Tester/Tester/: Tester.vcxproj  Tester.vcxproj.filters  main.cpp
conan-recipe/: conanfile.py  test.bat
conan-recipe/test_package/: example.cpp
include/BulkFileReader/: BulkFileReader.h
projects/bulkfilereader/include/BulkFileReader/: BulkFileReader.h
projects/tester/: CMakeLists.txt
projects/tester/source/: char_text.txt
